apps/ingress/service.yaml
# service.yaml

apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app
